<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="8dp">

    <ScrollView
        android:id="@+id/ingredients_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <TextView
            android:id="@+id/recipe_detail_text"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="16sp" />
    </ScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_detail_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />


</LinearLayout>


