<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp"
    android:tag="phone-port">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="16dp"
        android:fitsSystemWindows="true" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/recipe_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/previous_step"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/ic_navigate_before_black_18dp"
            android:padding="48dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/next_step"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/ic_navigate_next_black_18dp"
            android:padding="48dp" />
    </LinearLayout>


</LinearLayout>


